fix(qa): simpler grid layout fix for overflow

--- a/framework/core/less/common/root.less
+++ b/framework/core/less/common/root.less
@@ -116,8 +116,4 @@
   @media @tablet { --flarum-screen: tablet; }
   @media @desktop { --flarum-screen: desktop; }
   @media @desktop-hd { --flarum-screen: desktop-hd; }
-
-  @media @tablet { --container-width: @screen-tablet; }
-  @media @desktop { --container-width: @screen-desktop; }
-  @media @desktop-hd { --container-width: @screen-desktop-hd; }
 }
