--- a/framework/core/less/forum/DiscussionPage.less
+++ b/framework/core/less/forum/DiscussionPage.less
@@ -25,10 +25,9 @@
 @media @tablet-up {
   .DiscussionPage-discussion {
     > .container {
-      --container-gap: 75px;
       display: grid;
-      grid-gap: var(--container-gap);
-      grid-template-columns: calc(~"var(--container-width) - 150px - var(--container-gap)") 150px;
+      grid-gap: 75px;
+      grid-template-columns: 1fr 150px;
       grid-template-areas: 'stream nav';
 
       &::before, &::after {
@@ -65,6 +64,8 @@
 
   .DiscussionPage-stream {
     grid-area: stream;
+    max-width: 100%;
+    min-width: 0;
   }
 }
 
